--- a/Views/chatRoom.html
+++ b/Views/chatRoom.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker</title>
+    <title>Chat App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/chatRoom.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <style>
         @media (max-width: 991px) {
@@ -22,8 +23,10 @@
     </style>
 </head>
 <header id="navbar" class="bg-primary text-white text-center py-2">
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navBeforeLogin">
-        <a class="navbar-brand" href="#">Expense Tracker</a>
+        <div class="position-absolute top-0 end-0 me-5" id="div-alert"></div>
+        <a class="navbar-brand" href="#">Group Chat App</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +40,7 @@
                     <a class="nav-link" href="/chat/chatRoom" id="chatlink">Chat Room</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" id="expense">Friends</a>
+                    <a class="nav-link" href="#" id="chatlink">Friends</a>
                 </li>
 
             </ul>
@@ -51,54 +54,50 @@
 </header>
 
 <body>
-    <div class="container my-5 position-relative">
-        <div class="position-absolute top-0 end-0" id="div-alert"></div>
-        <div class="row">
-            <div class="col-lg-6">
-                <h2>Welcome to Group Chat!</h2>
-                <p>Hello Dear Friends! <br> In the app you can do the chat with anyone thorugh out the world You can
-                    find all the features which
-                    are available in WhatsApp</p>
-                <a href="/chat/chatRoom" class="btn btn-primary">Enter to Chat Room</a>
+
+    <div class="container">
+        <div class="chat-container">
+            <div class="chat-header">
+                Chat App
             </div>
+            <div class="chat-messages" id="chatbox">
+                <div class="message sender" id="sender">
+                    <div class="message-content" id="senderMsg">?</div>
+                </div>
+                <div class="message receiver" id=receiver>
+                    <div class="message-content" id="receiverMsg">.</div>
+                </div>
+
+                <div class="loading-button text-center mt-3" id="loading">
+                    <button class="btn btn-primary" disabled></button>
+                </div>
+                <!-- Add more messages as needed -->
+            </div>
+            <form id="massageForm">
+                <div class="chat-input">
+                    <input type="text" id="messageText" class="input-box" placeholder="Type your message...">
+                    <button type="submit" class="send-button">Send</button>
+                </div>
+            </form>
+
         </div>
     </div>
 
-    <div class="container-fluid bg-light py-5">
-        <div class="container">
-            <h2 class="text-center">Key Features</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <h3>One to One Chat</h3>
-                    <p>You can do the one to one chat with you favorite once</p>
-                </div>
-                <div class="col-md-4">
-                    <h3>Group Chat</h3>
-                    <p> you can make the groups like WhatsApp and can do the chat in grups also</p>
-                </div>
-                <div class="col-md-4">
-                    <h3>Online and OffLine</h3>
+    <!-- <script>
+        // Show the loading button during page load
+        function myFunction() {
+            const loadingButton = document.querySelector('.loading-button');
+            loadingButton.style.display = 'none';
+            console.log("hi")
 
-                    <p>you can check weather any person is online or not </p>
-                </div>
-            </div>
-        </div>
-    </div>
+        }
+        setInterval(myFunction, 500);
 
-    <div class="container my-5">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2>Contact Us</h2>
-                <p>If you have any questions or need assistance, feel free to contact our support team. We are here to
-                    help you!</p>
-                <p>Email: kumarmudasir@gmail.com</p>
-                <p>Phone: 9682124710</p>
-            </div>
-        </div>
-    </div>
+    </script> -->
 
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <script src="../js/script.js"></script>
+    <script src="../js/chatRoom.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
