--- a/Views/chatRoom.html
+++ b/Views/chatRoom.html
@@ -97,7 +97,7 @@
                     </div>
                     <form id="massageForm">
                         <img id="imagePreview" class="img-fluid mt-2"
-                            style="display: none; height: 100px; width: 100px;">
+                            style="display: none; height: 100px; width: 100px; border-radius: 2rem;">
                         <p id="showFileName"></p>
                         <div class="chat-input">
 
